src/main/java/org/example/liskovsubstitution/good/HomeLoan.java
package org.example.liskovsubstitution.good;

public class HomeLoan implements SecureLoanPayment {
    @Override
    public void doPayment() {

    }

    @Override
    public void forceCloseLoan() {

    }
}
